[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Starshine.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Sunshine.gd" type="Script" id=2]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CapsuleShape2D" id=2]

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 1 )
hframes = 3

[node name="Rotater" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
